--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -42,7 +42,7 @@ jobs:
             docker buildx build --platform ${{ matrix.platform }} --build-arg VERSION=`cat version.txt` --build-arg BUILD_DATE=`date -u +%Y-%m-%dT%H:%M:%SZ` -f docker/Dockerfile -t "$tag" -o type=docker .
             set +x
             docker images | grep "$tag"
-            docker images | grep "$tag" |awk "{print$1}" |xargs docker save -o opensearch-benchmark-images.tar
+            docker save $tag -o opensearch-benchmark-docker-image.tar
       
 
       - name: Publish release
@@ -50,4 +50,4 @@ jobs:
         with:
           draft: true
           generate_release_notes: true
-          files: opensearch-benchmark-images.tar             
+          files: opensearch-benchmark-docker-image.tar          
